
- Issue #1680159: unicode coercion during an 'in' operation no longer masks
  the underlying error when the coercion fails for the left hand operand.

- Issue #7491: Metaclass's __cmp__ method was ignored.

- Issue #7466: segmentation fault when the garbage collector is called
  in the middle of populating a tuple.  Patch by Florent Xicluna.


Library
-------

- Issue #7556: Distutils' msvc9compiler now opens the MSVC Manifest 
  file in text mode.

- Issue #7552: Removed line feed in the base64 Authorization header in
  the Distutils upload command to avoid an error when PyPI reads it.
  This occurs on long passwords. Initial patch by JP St. Pierre.

- Issue #7231: urllib2 cannot handle https with proxy requiring auth.
  Patch by Tatsuhiro Tsujikawa.

- Issue #7349: Make methods of file objects in the io module accept None as an
  argument where file-like objects (ie StringIO and BytesIO) accept them to mean
  the same as passing no argument.

- Issue #7348: StringIO.StringIO.readline(-1) now acts as if it got no argument
  like other file objects.

- Issue #7357: tarfile no longer suppresses fatal extraction errors by
  default.

- Issue #7470: logging: fix bug in Unicode encoding fallback.

- Issue #5949: fixed IMAP4_SSL hang when the IMAP server response is
  missing proper end-of-line termination.

- Issue #7457: added a read_pkg_file method to
  distutils.dist.DistributionMetadata.

Build
-----

- Switch to OpenSSL 0.9.8l on Windows.

- Issue #7541: when using ``python-config`` with a framework install the compiler might
  use the wrong library.

Tests
-----

- Issue #7376: instead of running a self-test (which was failing) when called
  with no arguments, doctest.py now gives a usage message.

- Issue #7396: fix regrtest -s, which was broken by the -j enhancement.

- Issue #7498: test_multiprocessing now uses test_support.find_unused_port
  instead of a hardcoded port number in test_rapid_restart.



What's New in Python 2.7 alpha 1