@@ -119,6 +119,26 @@ class UtilTestCase(support.EnvironGuard, unittest.TestCase):
         sys.version = ('2.5 (r25:51918, Sep 19 2006, 08:49:13) '
                        '\n[GCC 4.0.1 (Apple Computer, Inc. build 5341)]')
         sys.platform = 'darwin'
+
+        self._set_uname(('Darwin', 'macziade', '8.11.1',
+                   ('Darwin Kernel Version 8.11.1: '
+                    'Wed Oct 10 18:23:28 PDT 2007; '
+                    'root:xnu-792.25.20~1/RELEASE_I386'), 'PowerPC'))
+        os.environ['MACOSX_DEPLOYMENT_TARGET'] = '10.3'
+
+        get_config_vars()['CFLAGS'] = ('-fno-strict-aliasing -DNDEBUG -g '
+                                       '-fwrapv -O3 -Wall -Wstrict-prototypes')
+
+        maxint = sys.maxint
+        try:
+            sys.maxint = 2147483647
+            self.assertEquals(get_platform(), 'macosx-10.3-ppc')
+            sys.maxint = 9223372036854775807
+            self.assertEquals(get_platform(), 'macosx-10.3-ppc64')
+        finally:
+            sys.maxint = maxint
+
+
         self._set_uname(('Darwin', 'macziade', '8.11.1',
                    ('Darwin Kernel Version 8.11.1: '
                     'Wed Oct 10 18:23:28 PDT 2007; '
@@ -128,7 +148,15 @@ class UtilTestCase(support.EnvironGuard, unittest.TestCase):
         get_config_vars()['CFLAGS'] = ('-fno-strict-aliasing -DNDEBUG -g '
                                        '-fwrapv -O3 -Wall -Wstrict-prototypes')
 
-        self.assertEquals(get_platform(), 'macosx-10.3-i386')
+        maxint = sys.maxint
+        try:
+            sys.maxint = 2147483647
+            self.assertEquals(get_platform(), 'macosx-10.3-i386')
+            sys.maxint = 9223372036854775807
+            self.assertEquals(get_platform(), 'macosx-10.3-x86_64')
+        finally:
+            sys.maxint = maxint
+
 
         # macbook with fat binaries (fat, universal or fat64)
         os.environ['MACOSX_DEPLOYMENT_TARGET'] = '10.4'
@@ -172,6 +200,7 @@ class UtilTestCase(support.EnvironGuard, unittest.TestCase):
                                            '-dynamic -DNDEBUG -g -O3'%(arch,))
 
             self.assertEquals(get_platform(), 'macosx-10.4-%s'%(arch,))
+
 
         # linux debian sarge
         os.name = 'posix'
